Added background, additional classes and two different bonus tables

--- a/src/server/views/home.pug
+++ b/src/server/views/home.pug
@@ -16,6 +16,12 @@ html(lang="es")
       media= 'screen'
       rel= 'stylesheet'
     )
+    link(
+      type= 'text/css'
+      href= '/stylesheets/skizio.css'
+      media= 'screen'
+      rel= 'stylesheet'
+    )
     script(
       type= 'text/javascript'
       src= '/semantic/semantic.min.js'
